--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGODB_URI = ""
+MONGODB_URI = "mongodb+srv://aaronjomon24:aaronjomon5@aaronjomon.jvfff.mongodb.net/?retryWrites=true&w=majority&appName=aaronjomon"
